# Binary-Hammer

./: .gitignore  CMakeLists.txt  README.md  compile  imgui.ini  vcpkg.json
incl/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
src/: config.h  console_handler.cpp  console_handler.h  logger.h  main.c  main.cpp  win32_headers.h
src/binary/: binary.h  headers.h
src/rendering/: file_prompt.h  render.cpp  render.h  ui.cpp  ui.h
